--- a/static/css/base.css
+++ b/static/css/base.css
@@ -97,7 +97,9 @@ a.category_badge > span.badge:hover {
     right: 10px;
 }
 
-.btt-link{
+.btt-link,
+.update-link,
+.remove-item {
     cursor: pointer;
 }
 
