--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     {% endblock %}
 
     {% block corejs %}
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/fc8fa5d1b2.js" crossorigin="anonymous"></script>
@@ -113,7 +113,21 @@
     </header>
     
     {% if messages %}
-        <div class="message-container"></div>
+        <div class="message-container">
+          {% for message in messages %}
+            {% with message.level as level %}
+                {% if level == 40 %}
+                  {% include 'includes/toasts/toast_error.html' %}
+                {% elif level == 30 %}
+                  {% include 'includes/toasts/toast_warning.html' %}
+                {% elif level == 25 %}
+                  {% include 'includes/toasts/toast_success.html' %}
+                {% else %}
+                  {% include 'includes/toasts/toast_info.html' %}
+                {% endif %}
+            {% endwith %}
+          {% endfor %}
+        </div>
     {% endif %}
 
     {% block page_header %}
@@ -123,6 +137,9 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script type="text/javascript">
+        $('.toast').toast('show');
+    </script>
     {% endblock %}
     
   </body>
